<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <!-- <EditText -->
    <!-- android:id="@+id/editTextXDirection" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_alignBottom="@+id/textViewXDirection" -->
    <!-- android:layout_alignLeft="@+id/editTextXEnd" -->
    <!-- android:ems="10" -->
    <!-- android:inputType="numberDecimal" -->
    <!-- android:text="@string/dirxValue" /> -->


    <!-- <TextView -->
    <!-- android:id="@+id/textViewXEnd" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_alignLeft="@+id/textViewXStart" -->
    <!-- android:layout_below="@+id/editTextXStart" -->
    <!-- android:layout_marginTop="22dp" -->
    <!-- android:text="@string/xend" /> -->


    <!-- <TextView -->
    <!-- android:id="@+id/textViewXDirection" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_alignLeft="@+id/textViewXEnd" -->
    <!-- android:layout_below="@+id/editTextXEnd" -->
    <!-- android:layout_marginTop="20dp" -->
    <!-- android:text="@string/dirx" /> -->


    <!-- <TextView -->
    <!-- android:id="@+id/textViewYEnd" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_alignBottom="@+id/editTextYEnd" -->
    <!-- android:layout_alignLeft="@+id/textViewYStart" -->
    <!-- android:text="@string/yend" /> -->


    <!-- <EditText -->
    <!-- android:id="@+id/editTextXEnd" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_alignLeft="@+id/editTextXStart" -->
    <!-- android:layout_below="@+id/editTextXStart" -->
    <!-- android:ems="10" -->
    <!-- android:inputType="numberDecimal" -->
    <!-- android:text="@string/xendValue" > -->


    <!-- <requestFocus /> -->
    <!-- </EditText> -->


    <!-- <TextView -->
    <!-- android:id="@+id/textViewYDirection" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_alignBaseline="@+id/editTextYDirection" -->
    <!-- android:layout_alignBottom="@+id/editTextYDirection" -->
    <!-- android:layout_alignLeft="@+id/textViewYEnd" -->
    <!-- android:text="@string/diry" /> -->


    <!-- <EditText -->
    <!-- android:id="@+id/editTextYEnd" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_alignLeft="@+id/editTextYStart" -->
    <!-- android:layout_below="@+id/textViewYStart" -->
    <!-- android:ems="10" -->
    <!-- android:inputType="numberDecimal" -->
    <!-- android:text="@string/yendValue" /> -->


    <!-- <EditText -->
    <!-- android:id="@+id/editTextYStart" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_alignBottom="@+id/textViewYStart" -->
    <!-- android:layout_alignLeft="@+id/editTextXDirection" -->
    <!-- android:ems="10" -->
    <!-- android:inputType="numberDecimal" -->
    <!-- android:text="@string/ystartValue" /> -->


    <!-- <TextView -->
    <!-- android:id="@+id/textViewYStart" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_alignLeft="@+id/textViewXDirection" -->
    <!-- android:layout_below="@+id/textViewXDirection" -->
    <!-- android:layout_marginTop="21dp" -->
    <!-- android:text="@string/ystart" /> -->


    <!-- <EditText -->
    <!-- android:id="@+id/editTextYDirection" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_alignLeft="@+id/editTextYEnd" -->
    <!-- android:layout_below="@+id/editTextYEnd" -->
    <!-- android:layout_marginTop="18dp" -->
    <!-- android:ems="10" -->
    <!-- android:inputType="numberDecimal" -->
    <!-- android:text="@string/diryValue" /> -->


    <!-- <TextView -->
    <!-- android:id="@+id/textViewXStart" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_alignParentTop="true" -->
    <!-- android:layout_marginRight="22dp" -->
    <!-- android:layout_marginTop="29dp" -->
    <!-- android:layout_toLeftOf="@+id/editTextXStart" -->
    <!-- android:text="@string/xstart" /> -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewTimeT1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/time1" />

        <EditText
            android:id="@+id/editTextTimeT1Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/time1Value" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textViewGainK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/gaink" />

        <EditText
            android:id="@+id/editTextGainkValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/gainkValue" />

        <TextView
            android:id="@+id/TextViewTimeTt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/timeTt" />

        <EditText
            android:id="@+id/editTextTtValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/time1Value" />

        <TextView
            android:id="@+id/TextIndexI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/indexi" />

        <EditText
            android:id="@+id/editTextIndexIValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/indexiValue" />
    </LinearLayout>

</LinearLayout>